# smart_device_protocol

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: catkin_build.yml  clang_format.yml  platformio.yml  platformio_full.yml  python_black.yml  release.yml
arduino_lib/: ArduinoAtomS3Hardware.h  enr_util.h  iot_client_util.h  iot_host_util.h  iot_wifi_util.h  message.h  packet_creator.h  packet_parser.h  packet_util.h  sesami_util.cpp  sesami_util.h  switchbot_util.h  time.cpp  uwb_module_util.h
arduino_lib/devices/: m5stack_servo_module.h  m5stack_tof_unit.h  stickv2_util.h  uwb_module_util.h
arduino_lib/iot_com_util/: Time.h  iot_client_util.h  iot_host_util.h
arduino_lib/m5stack_utils/: common.h  m5atomlite.h  m5atoms3.h  m5core2.h  m5paper.h  m5stack.h  m5stickcplus.h
arduino_lib/sdp/: esp_now.h  packet_creator.h  packet_parser.h  packet_util.h  sdp.h  sdp_rpc.h  sdp_util.h
arduino_lib/utils/: calc_altitude.h  config_loader.h
arduino_lib/web_services/: sesami_util.h  switchbot_util.h
arduino_lib_sesami_util/: Time.h  sesami_util.h
config/: esp_now_ros_interface.yaml
docs/: README_old.md
launch/: demo.launch
msg/: Packet.msg  PacketType.msg
node_scripts/: act_as_ambulance.py  broadcast_test_packet.py  broadcast_v1_test_packet.py  emergency_caller.py  enr_board_writer.py  esp_now_packet_printer.py  esp_now_v1_packet_printer.py  sdp_v2_device_interface_printer.py  sdp_v2_packet_printer.py  smart_device_interface.py
python/esp_now_ros/: __init__.py  esp_now_ros_interface.py  packet_generator.py  packet_parser.py  sdp_frames.py  sdp_interface.py  smart_device_protocol_interface.py  utils.py
python/smart_device_protocol/: esp_now_ros_interface.py  packet_parser.py  sdp_frames.py  smart_device_protocol_interface.py
ros_lib/ros_lib/: ros.h
scripts/: get_switchbot_devices.py  update_ros_lib.sh
sketchbooks/enr_dps310_interface/: platformio.ini
sketchbooks/enr_interface_with_uwb/: platformio.ini
sketchbooks/enr_message_board/: platformio.ini
sketchbooks/enr_stickv2_interface/: platformio.ini
sketchbooks/environment_broadcaster/: README.md  platformio.ini
sketchbooks/esp_now_ros/: README.md  platformio.ini
tests/: record_test.sh  sdp_v2_interface_rostest.test  test_sdp_interface.py  test_topics.bag
(+764 files in other folders)
