<?xml version="1.0"?>
<package format="2">
  <name>esp_now_ros</name>
  <version>0.0.1</version>
  <description>The esp_now_ros package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
